Shadow jakarta.json and parsson into processor jar